# bpf-linker

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  BUILDING.md  Brewfile  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  TODO.md  appveyor.yml  build-llvm.sh  build.rs  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/build-llvm/: action.yml
.github/actions/free-disk-space/: action.yaml
.github/actions/report-disk-usage/: action.yml
.github/workflows/: bazel_ci.yml  build-test.yml  build_release.sh  ci.yml  lint.yml  llvm.yml  release.yml
bazel/: BUILD.bazel  defs.bzl  release.bzl  rust_test_wrapper.sh
bazel/btfdump/: BUILD.bazel  Cargo.toml
bazel/btfdump/src/: lib.rs
bazel/patches/: BUILD.bazel  llvm_assertions.patch  llvm_release_debug_info.patch  rules_rs_bpf_linker_from_source.patch  rules_rust_distributed_thin_lto.patch  rules_rust_release_debug_info.patch
bazel/toolchains/: BUILD.bazel
ci/: aarch64-linux-musl-clang  aarch64-linux-musl-clang++  aarch64-linux-musl-run  common.sh  prepare-musl-sysroot.py  prepare-musl-sysroot.sh  x86_64-linux-musl-clang  x86_64-linux-musl-clang++  x86_64-linux-musl-run
docker/: Dockerfile.cross-aarch64-unknown-linux-gnu  Dockerfile.cross-aarch64-unknown-linux-musl  Dockerfile.cross-riscv64-unknown-linux-musl  Dockerfile.cross-riscv64gc-unknown-linux-gnu  Dockerfile.native-x86_64-unknown-linux-gnu  Dockerfile.native-x86_64-unknown-linux-musl
examples/: basic.rs
scripts/: bpf-linker-build.sh  llvm-build.sh  llvm-rustflags.sh  rust-ci-rust-dev-url.sh
src/: init.rs  lib.rs  linker.rs  objcopy.rs  path.rs  runtest.rs
src/llvm/: bitcode.rs  context.rs  core_reloc.rs  di.rs  ir.rs  iter.rs  memory_buffer.rs  message.rs  mod.rs  module.rs  target_machine.rs
src/llvm/types/: context.rs  data_layout.rs  di.rs  di_builder.rs  instruction.rs  ir.rs  ir_builder.rs  memory_buffer.rs  mod.rs  module.rs  target.rs  target_machine.rs
tests/: AGENTS.md  BUILD.bazel  compiletest.rs  defs.bzl  filecheck.sh  filecheck_wrapper.sh  ir_file_test.rs  link_ir.rs  llvm-api.rs  rust_test_wrapper.sh  tests.rs
tests/assembly/: bin.rs  di_generics.rs  elf-sections.rs  exported-symbols.rs  extern_linkage.rs  ignore-inline-never.rs  ilog2.rs  preserve-nested-array-access-index.rs  preserve-struct-access-index.rs  re-export-symbols.rs  unroll-loop.rs
tests/assembly/auxiliary/: dep-exports.rs  dep-section.rs  dep.rs  loop-panic-handler.rs
tests/btf/assembly/: anon_rust.rs  anon_struct_c.rs  basic.rs  c_void_enum.rs  data-carrying-enum.rs  exported-symbols.rs  maybe-uninit-union-name.rs
tests/btf/assembly/auxiliary/: dep-exports.rs  loop-panic-handler.rs
tests/c/: anon.c
tests/ir/: anon.bc  anon.ll
tests/nightly/assembly/: preserve-array-access-index.rs  preserve-union-access-index.rs
tests/nightly/btf/assembly/: anon_struct_c.check  anon_struct_c.rs
tests/sanitizer/assembly/auxiliary/: dep-exports.rs
tests/sanitizer/btf/assembly/: data-carrying-enum.rs
tests/sanitizer/btf/assembly/auxiliary/: dep-exports.rs  loop-panic-handler.rs
xtask/: Cargo.toml
xtask/src/: build.rs  build_llvm.rs  cargo.rs  check.rs  containers.rs  git.rs  install.rs  llvm.rs  main.rs  shell.rs  target.rs  tempdir.rs  test.rs
