[package]
name = "bpf-linker"
version = "0.9.14"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
description = "BPF static linker"
license = "MIT OR Apache-2.0"
keywords = ["BPF", "eBPF", "linker", "llvm"]
categories = [
    "development-tools",
    "command-line-utilities",
    "no-std",
    "os::linux-apis",
]
repository = "https://github.com/aya-rs/bpf-linker"
readme = "README.md"
edition = "2021"

[dependencies]
# cli deps
anyhow = { workspace = true }
clap = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4"

# lib deps
ar = { version = "0.9.0" }
aya-rustc-llvm-proxy = { version = "0.9.4", optional = true }
gimli = { version = "0.32.0" }
libc = { version = "0.2.174" }
llvm-sys = { features = ["disable-alltargets-init"], version = "201.0.0-rc1" }
log = { version = "0.4.27" }
thiserror = { version = "2.0.12" }
tracing = "0.1"

[dev-dependencies]
compiletest_rs = { version = "0.11.0" }
regex = { version = "1.11.1", default-features = false }
rustc-build-sysroot = { workspace = true }
which = { version = "8.0.0", default-features = false, features = ["real-sys", "regex"] }

[[bin]]
name = "bpf-linker"

[features]
rust-llvm = [
    "dep:aya-rustc-llvm-proxy",
    "llvm-sys/no-llvm-linking",
]
default = ["rust-llvm"]

[workspace]
members = ["xtask"]

[workspace.dependencies]
# cli deps
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
# dev deps
rustc-build-sysroot = { version = "0.5.9", default-features = false }

[profile.release]
debug = true

[patch.crates-io]
compiletest_rs = { git = "https://github.com/Manishearth/compiletest-rs.git" }
