[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
rustc-build-sysroot = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
