[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
rustc-build-sysroot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }

[lints]
workspace = true
