platform(
    name = "rbe_x86_64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "Linux",
        "container-image": "docker://ubuntu:24.04",
    },
    visibility = ["//visibility:public"],
)
