# Bazel selects this platform for BuildBuddy remote execution. The container
# provides a recent glibc; the Rust, C++, LLVM, and archive tools are supplied
# by registered hermetic toolchains.
platform(
    name = "rbe_x86_64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "Linux",
        "container-image": "docker://ubuntu:24.04",
    },
    visibility = ["//visibility:public"],
)
